# NBA

./: .gitignore  Pipfile  README.md  environment.yml  nbafuns.py  pyproject.toml
Data_Science/: NBA_NN.ipynb  NBA_NN_Data_Adv_2020_2021.csv  NBA_NN_Data_Basic_2020_2021.csv  keras_tut.ipynb
Frustration_Coast/: README.md  coast_to_coast_PBP.ipynb  frustration_foul_PBP.ipynb  offRebound_assists_PBP.ipynb
Leaderboards/: gleague_player_leaders.ipynb  nba_FourFactor.ipynb  nba_SOS_adj.ipynb  nba_player_leaders.ipynb  nba_team_leaders.ipynb  nba_team_pts_for_ag.ipynb  win_loss_model.ipynb
PBP/: README.md  importNBA_rough.ipynb  importPBP_poss_all_description.ipynb  importPBP_possessions.ipynb  save_Adv_BoxScores.ipynb  update_data.bat  update_data.py
PlayerData/: get_player_data.ipynb  merge_player_data.ipynb
R/: NBA_ratings_agg.Rmd  NBA_ratings_agg.r  bad_calls.r  bad_calls_shooting.r  bad_calls_teams.r  bbref_mvp.r  bbref_save_data.r  nba_histograms.Rmd  nfl.r  play_by_play.r  possessions_iztok.r  team_shooting_splits.r
RAPM/: importPBP_possessions.ipynb  leverage.ipynb  rapm.ipynb  rapm_CV.ipynb  rapm_alpha.ipynb  rapm_analysis.ipynb  rapm_je.ipynb  rapm_poss_prior.ipynb  rapm_win_projection.ipynb
Save_Player_League_Data/: README.md  pbp_get_all_players_for_league.ipynb  players_season.ipynb  save_nba_teams.ipynb
Shooting/: 3PT_NBA _Touchtime.ipynb  3PT_NBA _dribbles.ipynb  3PT_NBA _shotclock.ipynb  FT_3PT_NBA.ipynb  README.md  Threeptshooting_NBA _shotclock.ipynb  analyze_plot_data_3PT.ipynb  analyze_plot_data_FT_3PT.ipynb  threeptshooting_NBA _Touchtime.ipynb  threeptshooting_NBA _dribbles.ipynb  threeptshooting_NBA_old.ipynb
Shot_Charts/: README.md  SSQM_V0.ipynb  WNBA_plot_loc_data_PBP.ipynb  compare_SSQM_versions.ipynb  dunks_age.ipynb  ft_locations.ipynb  get_Loc_Data_PBP.ipynb  get_shot_data_NBA.ipynb  heat_map_gobert.ipynb  player_shot_type_leaders.ipynb  playoff_regular_shot_chart.ipynb  plot_Shot_Chart_Daniel.ipynb  plot_loc_data_PBP.ipynb  plot_shot_hex_NBA.ipynb  shot_quality.ipynb  shot_quality_league_avg.ipynb  ssqm_V1.ipynb  ssqm_V2.ipynb  ssqm_V2_beta.ipynb  ssqm_V2_comp.ipynb  ssqm_V2_multi.ipynb  ssqm_V2_team.ipynb
Tweetbots/: 3PT_stats_tweet.ipynb  README.md  euro_foul.bat  euro_foul.py  frust_foul.bat  frust_foul.py  nbafuns.py  tweet_grizz_3pt.bat  tweet_grizz_3pt.py
Wingspan_Defense/: analyze_plot_data_Defense_Wing.ipynb  defense_NBA.ipynb  wingspan_NBA.ipynb
apps/: scorigami_app.ipynb
data/: ALL.json  GLeague.json  GLeague_players_database.csv  GLeague_players_database_2021.csv  NBA.json  NBA_players_database.csv  NBA_players_database_2021.csv  NBA_teams_colors_logos.csv  NBA_teams_colors_logos.parquet  NBA_teams_database.csv  WNBA.json  WNBA_players_database.csv  WNBA_players_database_2021.csv  WNBA_teams_database.csv  nba.json  wnba.json
deprecated/: code_snippets.ipynb  hnpm.ipynb  nba_LEBRON_missed.ipynb  nba_SOS_adj_V2.ipynb
grizzlies3pt/: 3PT_stats_tweet.ipynb
import_data/: README.md  compress_pbp_data.ipynb  get_BoxScores_player.ipynb  get_DARKO.ipynb  get_Loc_Data_PBP.ipynb  get_advanced.py  get_boxscores.py  get_injury_data.ipynb  get_nba_roster.ipynb  get_nba_rosters.ipynb  get_pbp_data.py  get_pbp_tracking.ipynb  get_pbp_tracking.py  get_player_data.ipynb  get_player_database.ipynb  get_player_database.py  get_rapm_possessions.ipynb  get_shiny_data.py  get_shot_dash_NBA.ipynb  get_shot_data.py  get_shot_data_NBA.ipynb  get_shot_data_PBP.ipynb  importNBA_rough.ipynb  importPBP_poss_all_description.ipynb  importPBP_possessions.ipynb  importPBP_possessions_rapm.ipynb  import_DARKO.ipynb  import_bballindex_data.ipynb  merge_player_data.ipynb  pbp_get_all_players_for_league.ipynb  players_season.ipynb  save_Adv_BoxScores.ipynb  save_nba_teams.ipynb  save_player_BoxScores.ipynb  synergy_playtypes.ipynb  update_data.bat  update_data.py  update_data_V1.py  update_ratings.py
league_analysis/: all_start_voting.ipynb  attendance.ipynb  bench_analysis.ipynb  contracts.ipynb  league_playstyles.ipynb  mickey_mouse_march.ipynb  nba_elo.ipynb  odds.ipynb  players_missed.ipynb  players_missed_opponent.ipynb  playoff_model_table.ipynb  playoff_probabilities.ipynb  star_missed_games.ipynb  threept_shooting.ipynb  win_prob_model.py  win_probability_catboost.ipynb  win_probability_catboost_V2.ipynb  win_probability_cuda.ipynb  win_probability_grok.ipynb  win_probability_model.ipynb  (+2 more)
(+158 files in other folders)
