[tool.poetry]
name = "nba"
version = "0.1.0"
description = "environment for nba stuff"
authors = ["Sravan Pannala <57152030+sravanpannala@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nba-api = "^1.3.1"
pbpstats = "^1.3.10"
plotnine = "^0.12.4"
seaborn = "^0.13.0"
ipywidgets = "^8.1.1"
ipympl = "^0.9.3"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
rpy2 = "^3.5.14"
scikit-misc = "^0.3.0"
plottable = "^0.1.5"
tweepy = "^4.14.0"
plotly = "^5.18.0"
kaleido = "0.2.1"
ipykernel = "^6.26.0"
nbformat = "^5.9.2"
numba = "^0.58.1"
pyqt6 = "^6.6.0"
datar = "^0.15.3"
imageio = {extras = ["ffmpeg"], version = "^2.33.0"}
patchworklib = "^0.6.3"
nbqa = "^1.7.1"
black = "^23.11.0"
isort = "^5.12.0"
blacken-docs = "^1.16.0"
zstandard = "^0.22.0"
dill = "^0.3.7"
pyarrow = "^14.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
