[project]
name = "dav"
version = "0.2.0"
description = "Data Analysis and Visualization"
authors = [
    {name = "Sravan Pannala",email = "57152030+sravanpannala@users.noreply.github.com"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "plotnine (>=0.14.5,<0.15.0)",
    "imageio[ffmpeg] (>=2.36.1,<3.0.0)",
    "pbpstats (>=1.3.11,<2.0.0)",
    "sportsdataverse (>=0.0.39,<0.0.40)",
    "sportypy (>=1.0.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "great-tables (>=0.15.0,<0.16.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-misc (>=0.5.1,<0.6.0)",
    "kaleido (==0.2.1)",
    "datar (>=0.15.6,<0.16.0)",
    "scikit-learn-intelex (>=2025.0.1,<2026.0.0)",
    "chart-studio (>=1.1.0,<2.0.0)",
    "lets-plot (>=4.5.2,<5.0.0)",
    "colormaps (>=0.4.2,<0.5.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "atproto (>=0.0.56,<0.0.57)",
    "atprototools (>=0.0.17,<0.0.18)",
    "pyjson5 (>=1.6.8,<2.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "nba-api (>=1.7,<2.0)",
    "numba (>=0.61.0,<0.62.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "catboost (>=1.2.7,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nbqa = "^1.9.1"
black = "^24.10.0"
isort = "^5.13.2"
blacken-docs = "^1.19.1"
icecream = "^2.1.3"
nbconvert = "^7.16.5"
memory-profiler = "^0.61.0"
ipykernel = "^6.29.5"
ipympl = "^0.9.6"
ipywidgets = "^8.1.5"
tqdm = "^4.67.1"
nbformat = "^5.10.4"
zstandard = "^0.23.0"
dill = "^0.3.9"
pyarrow = "^18.1.0"
tenacity = "^9.0.0"
thefuzz = "^0.22.1"
shiny = "^1.2.1"
lxml = "^5.3.0"
cairosvg = "^2.7.1"
imgkit = "^1.2.3"
rpy2 = "^3.5.17"
pyqt6 = "^6.8.0"
selenium = "^4.27.1"
html5lib = "^1.1"
torch = { version = "^2.6.0", source="pytorch"}
torchaudio = { version = "^2.6.0", source="pytorch"}
torchvision = { version = "^0.21.0", source="pytorch"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority= "explicit"